# ChangeLog for dev-util/rcsi
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/rcsi/Attic/ChangeLog,v 1.1 2005/02/13 03:46:18 robbat2 Exp $

*rcsi-0.5 (12 Feb 2005)

  12 Feb 2005; Robin H. Johnson <robbat2@gentoo.org> +rcsi-0.5.ebuild:
  Initial submission by James Rowe <jnrowe@ukfsn.org>, cleaned up a bit.
