@@ -1,6 +1,6 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/rej/Attic/rej-0.15.ebuild,v 1.1 2005/04/22 20:51:53 dsd Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/rej/Attic/rej-0.15.ebuild,v 1.2 2005/05/07 17:02:15 dholm Exp $
 
 DESCRIPTION="A utility for solving diff/patch rejects"
 HOMEPAGE="http://ftp.suse.com/pub/people/mason/rej/"
@@ -8,7 +8,7 @@ SRC_URI="http://ftp.suse.com/pub/people/mason/rej/${P}.tar.gz"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="~x86"
+KEYWORDS="~x86 ~ppc"
 IUSE=""
 
 DEPEND=""
