@@ -1,6 +1,9 @@
 # ChangeLog for dev-util/rej
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/rej/ChangeLog,v 1.1 2005/04/22 20:51:53 dsd Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/rej/ChangeLog,v 1.2 2005/05/07 17:02:15 dholm Exp $
+
+  07 May 2005; David Holm <dholm@gentoo.org> rej-0.15.ebuild:
+  Added to ~ppc.
 
 *rej-0.15 (22 Apr 2005)
 
