@@ -1,6 +1,9 @@
 # ChangeLog for dev-util/rcsi
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/rcsi/Attic/ChangeLog,v 1.1 2005/02/13 03:46:18 robbat2 Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/rcsi/Attic/ChangeLog,v 1.2 2005/05/07 17:02:04 dholm Exp $
+
+  07 May 2005; David Holm <dholm@gentoo.org> rcsi-0.5.ebuild:
+  Added to ~ppc.
 
 *rcsi-0.5 (12 Feb 2005)
 
